test/compile_errors/stage1/obj/import_outside_package_path.zig
comptime{
    _ = @import("../a.zig");
}

// import outside package path
//
// tmp.zig:2:9: error: import of file outside package path: '../a.zig'
